Closed
Bug 157861
Opened 23 years ago
Closed 23 years ago
have to hit Back twice to return to '300: multiple choices'
Categories
(Core :: Networking: HTTP, defect, P3)
Tracking
()
VERIFIED
FIXED
mozilla1.1beta
People
(Reporter: jruderman, Assigned: darin.moz)
References
()
Details
(Whiteboard: [http/1.1 compliance])
Attachments
(1 file)
|
937 bytes,
patch
|
dougt
:
review+
rpotts
:
superreview+
asa
:
approval+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Load http://www.tentakles.com/TGPs/2002-07-09/picture.html (contains links to
porn).
2. Click a link, or if you want to avoid loading porn, click the home button.
3. Press back.
Result: Nothing happens. Have to press back a second time.
In addition, if I do this repeatedly:
1. Open a new browser window (Ctrl+N).
2. Paste in http://www.tentakles.com/TGPs/2002-07-09/picture.html and press enter.
3. Close the window.
Result: Step 2 works exactly every other time.
By the way, this is a cool porn site. Most porn sites make their 404 pages
spammy and it can be hard to tell that the pages are 404s. This one keeps its
404s clean and offers 300 when you mistype or misguess a character, which is
better than what most non-porn sites do. Even useit.com doesn't offer automatic
suggestions for mistyped URLs. What cool feature will the http/1.1 guys think
of next?
| Assignee | ||
Comment 1•23 years ago
|
||
trivial problem... we were trying to process the redirect, but since the 300
response came without a Location header, the redirect failed. as a result we
blew away the cache entry for the 300 response. then on the following attempt
to load the page, we were loading from scratch and it worked. this patch
simply adds a check to ensure that the cached response contains a Location
header before attempting a cached redirect.
| Assignee | ||
Updated•23 years ago
|
Severity: minor → normal
Status: NEW → ASSIGNED
Keywords: 4xp
Priority: -- → P3
Whiteboard: [http/1.1 compliance]
Target Milestone: --- → mozilla1.2alpha
Comment 2•23 years ago
|
||
Comment on attachment 92426 [details] [diff] [review]
v1 patch
r=dougt
Attachment #92426 -
Flags: review+
Comment 3•23 years ago
|
||
Attachment #92426 -
Flags: superreview+
| Assignee | ||
Comment 4•23 years ago
|
||
will try to land this for 1.1
Target Milestone: mozilla1.2alpha → mozilla1.1beta
Comment 5•23 years ago
|
||
Comment on attachment 92426 [details] [diff] [review]
v1 patch
a=asa (on behalf of drivers) for checkin to 1.1
Attachment #92426 -
Flags: approval+
| Assignee | ||
Comment 6•23 years ago
|
||
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Build: 2002-10-22-08-trunk
Back button works. Can open page all the time. Marking Verified!
Status: RESOLVED → VERIFIED
QA Contact: tever → jimmylee
You need to log in
before you can comment on or make changes to this bug.
Description
•