fixes bug 157861 - have to hit Back twice to return to '300: multiple choices' r=dougt sr=rpotts a=asa